WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229008
REGRESSION (
r278392
) performance.measure should never throw an InvalidAccessError for fetchStart
https://bugs.webkit.org/show_bug.cgi?id=229008
Summary
REGRESSION (r278392) performance.measure should never throw an InvalidAccessE...
Alex Christensen
Reported
2021-08-11 11:04:26 PDT
REGRESSION (
r278392
) performance.mark("fetchStart") should never throw an InvalidAccessError
Attachments
Patch
(2.08 KB, patch)
2021-08-11 11:06 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(4.70 KB, patch)
2021-08-11 14:13 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(4.70 KB, patch)
2021-08-11 14:16 PDT
,
Alex Christensen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-08-11 11:06:20 PDT
Created
attachment 435361
[details]
Patch
Alex Christensen
Comment 2
2021-08-11 11:06:23 PDT
<
rdar://problem/79960877
>
Alex Christensen
Comment 3
2021-08-11 11:06:57 PDT
If this isn't covered by a test, I'll write one that covers it.
Chris Dumez
Comment 4
2021-08-11 11:22:19 PDT
Comment on
attachment 435361
[details]
Patch r=me assuming the bots are happy.
Alex Christensen
Comment 5
2021-08-11 14:13:50 PDT
Created
attachment 435374
[details]
Patch
Alex Christensen
Comment 6
2021-08-11 14:16:06 PDT
Created
attachment 435375
[details]
Patch
EWS
Comment 7
2021-08-11 15:05:09 PDT
Committed
r280931
(
240448@main
): <
https://commits.webkit.org/240448@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435375
[details]
.
Alex Christensen
Comment 8
2021-08-11 21:29:32 PDT
r280956
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug