Remove optimistic assertion added in r280931 https://bugs.webkit.org/show_bug.cgi?id=229008

* page/PerformanceTiming.cpp:
(WebCore::PerformanceTiming::fetchStart const):
This assertion is hit in the test fast/dom/Window/property-access-on-cached-window-after-frame-removed.html
when accessing window.performance.fetchStart from a detached window object from a frame that has been removed from the DOM.



Canonical link: https://commits.webkit.org/240462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280956 268f45cc-cd09-0410-ab3c-d52691b4dbfc